JIT动态编译与优化